syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message ValidateSalesArrangementRequest {
	int32 SalesArrangementId = 1;
}

message ValidateSalesArrangementResponse {
    repeated ValidationMessage ValidationMessages = 1;
}

message ValidationMessage {
    string Parameter = 1;
    string Value = 2;
    int32 Code = 3;
    string Message = 4;
    string AdditionalInformation = 5;
    string ErrorQueue = 6;
    bool Severity = 7;
    ValidationMessageNoby NobyMessageDetail = 8;
}

message ValidationMessageNoby {
    enum NobySeverity {
        None = 0;
        Warning = 1;
        Error = 2;
    }

    NobySeverity Severity = 1;
    string Category = 2;
    string ParameterName = 3;
    string Message = 4;
}